--- a/Group_Project-master/css/style.css
+++ b/Group_Project-master/css/style.css
@@ -276,3 +276,9 @@ h2{
   left: 1px;
   border-radius: 20px;
 }
+
+@media only screen and (max-device-width: 1024px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
